# hr-intelligence-v2

./: .env.example  .gitignore  BUG-AUDIT-R2.md  BUG-AUDIT.md  Dockerfile  Makefile  README.md  REVIEW-OVERNIGHT.md  REVIEW-QG1.md  TEST-QG1.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_missing_columns.py  003_add_salary_helpdesk_expenses_fnf.py
backend/: __init__.py  config.py  database.py  dependencies.py  main.py
backend/admin/: __init__.py  router.py  schemas.py  service.py
backend/attendance/: models.py  router.py  schemas.py  service.py
backend/auth/: dependencies.py  models.py  router.py  schemas.py  service.py
backend/common/: __init__.py  audit.py  constants.py  exceptions.py  filters.py  (+6 more)
frontend/: index.html  package-lock.json  package.json
migration/: config.py  fix_leave_types.py  keka_api_sync.py  migrate_all.py  migrate_attendance.py  migrate_departments.py  migrate_employees.py  migrate_expenses.py  migrate_fnf.py  migrate_helpdesk.py  migrate_leaves.py  migrate_salaries.py  validate.py
nginx/: hr.cfai.in.conf
scripts/: backup.sh  deploy.sh  healthcheck.py  keka_incremental_sync.py  migrate_remaining.py  setup.sh  sync_keka.py
tests/: conftest.py  test_attendance.py  test_auth.py  test_common.py  test_dashboard.py  test_departments.py  test_employees.py  test_expenses.py  test_fnf.py  test_health.py  test_helpdesk.py  test_leave.py  test_notifications.py  test_salary.py  test_security.py
(+82 files in other folders)
