[project]
name = "hr-intelligence"
version = "1.0.0"
description = "HR Intelligence — Creativefuel Custom HR Platform"
requires-python = ">=3.12"
authors = [
    { name = "Creativefuel", email = "tech@creativefuel.io" }
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py312"
line-length = 120
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.isort]
known-first-party = ["backend"]

[tool.coverage.run]
source = ["backend"]
omit = ["tests/*", "alembic/*", "migration/*"]

[tool.coverage.report]
fail_under = 85
show_missing = true
